<resources>
    <string name="app_name">LinkStore</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="enter_the_link">enter the Link</string>
    <string name="paste_the_link">paste the Link</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t1">This App allows you to store Link,Share and view at anytime</string>
    <string name="t2"><![CDATA[*Use]]></string>
    <string name="t21"><![CDATA[to add new link]]></string>
    <string name="t3"><![CDATA[*Use]]></string>
    <string name="t31"><![CDATA[to share to others]]></string>
    <string name="t4"><![CDATA[*To delete the link stored just swipe from right to left]]></string>
    <string name="first">true</string>
    <string name="skip">skip</string>
    <string name="got_it">got it</string>
    <string name="next">Next</string>
    <string name="save_links_and_use_it_in_feature">Save Links and Use it in Feature</string>
    <string name="and_also_share_with_others">And Also Share With Others</string>
</resources>